objects/bre__BrEvents_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>bre__Description__c</fullName>
        <description>Description field for settings value</description>
        <inlineHelpText>Description field for settings value</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bre__Label__c</fullName>
        <description>Settings variable label</description>
        <inlineHelpText>Settings variable label</inlineHelpText>
        <label>Label</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bre__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>BrEvents Settings</label>
</CustomObject>